--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,9 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.7",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   },
