--- a/client/package.json
+++ b/client/package.json
@@ -10,9 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.2.6",
     "@pbe/react-yandex-maps": "^1.2.5",
     "@reduxjs/toolkit": "^2.0.1",
-    "@ant-design/icons": "^5.2.6",
     "antd": "^5.12.8",
     "axios": "^1.6.5",
     "react": "^18.2.0",
@@ -20,6 +20,7 @@
     "react-redux": "^9.0.4",
     "react-router-dom": "^6.21.1",
     "react-slick": "^0.29.0",
+    "redux-thunk": "^3.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
