--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "antd": "^5.12.8",
     "axios": "^1.6.5",
     "date-fns": "^3.2.0",
+    "rc-virtual-list": "^3.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.0",
